--- a/foto.html
+++ b/foto.html
@@ -199,7 +199,7 @@
 				<p class="lead">Galleria delle nostre foto.</p>
 			</header>
 
-			<div class="panel-body">
+			<section class="panel-body">
 				<div class="panel panel-info">
 					<div class="panel-heading">
 						<button class="btn btn-primary" data-toggle="collapse" data-target="#filter">Esegui un filtro di ricerca</button>
@@ -235,16 +235,14 @@
 						</div>
 					</div>
 				</div>
-			</div>
-
-			<section class="panel-body">
+				
 				<div class="row">
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<a href="foto1.html">
 								<img src="img/img3.jpg" alt="">
 							</a>
-							<div class="caption pull">
+							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-primary">Space</span>
 								<span class="btn label label-default">Universe</span>
