--- a/foto1.html
+++ b/foto1.html
@@ -183,36 +183,33 @@
 		</div>
 	</nav>
 
-	<header class="container">
+	<main class="container">
 		<ol class="breadcrumb">
-			<li><a href="index.html">Home</a></li>
+			<li><a href="indexlogged.html">Home</a></li>
 			<li><a href="foto.html">Foto Gallery</a></li>
-			<li class="active">Foto</li>
+			<li class="active">Foto1</li>
 		</ol>
-	</header>
-		<main class="container">
-			<section class="panel panel-default">
-				<div class="panel-heading">
-					<h1>
-					<!-- <i class="fa fa-camera-retro" aria-hidden="true"></i> -->
-						Space Shroom Foto Gallery
-					</h1>
-					<p class="lead">Galleria delle nostre foto.</p>
-					
-			</div>
 
-			<div class="thumbnail panel-body">
-				<h3>Immagine della SSI</h3>
-				<img src="img/img3.jpg" alt="" class="img-rounded img-responsive" style="width:100%">
-				<div class="caption pull">
-					<small> Tags:</small>
-					<span class="btn label label-primary">Space</span>
-					<span class="btn label label-default">Universe</span>
-					<cite class="pull-right">Marco CAR</cite>
-				</div>
-			</div>
-			
+		<section class="panel panel-default">
+			<header class="panel-heading">
+				<h1>
+				<!-- <i class="fa fa-camera-retro" aria-hidden="true"></i> -->
+					Space Shroom Foto Gallery
+				</h1>
+				<p class="lead">Galleria delle nostre foto.</p>
+			</header>
+
 			<div class="panel-body">
+				<h3>Immagine della SSI</h3>
+				<div class="thumbnail">
+					<img src="img/img3.jpg" alt="" class="img-rounded img-responsive" style="width:100%">
+					<div class="caption pull">
+						<small> Tags:</small>
+						<span class="btn label label-primary">Space</span>
+						<span class="btn label label-default">Universe</span>
+						<cite class="pull-right">Marco CAR</cite>
+					</div>
+				</div>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt hic eveniet blanditiis incidunt quidem. Voluptas obcaecati quasi voluptate autem placeat culpa, odit minus voluptatem odio dolor? Voluptas aliquid reprehenderit perferendis eaque ea blanditiis soluta, eligendi tempore officiis accusantium laborum fugiat maiores aliquam voluptates harum accusamus ut minima, nam saepe facere voluptate vero molestiae? Harum vel repellendus inventore vitae voluptates quisquam aspernatur incidunt vero dolores natus laudantium, exercitationem fuga eum quos doloribus pariatur hic ab accusamus atque? Alias voluptatum sit unde aperiam! Magni quis dolor, eos nihil reprehenderit, error cumque ipsa minima, excepturi eum quibusdam! Natus numquam tenetur et eveniet enim!</p>
 				<p>Officia facilis consequuntur pariatur mollitia obcaecati reiciendis, possimus provident ipsam laborum quo excepturi maiores voluptate, placeat, sit eum ut qui quia? Excepturi vero velit reiciendis molestiae doloribus corrupti at recusandae cupiditate a cum! Et quasi non delectus optio. Voluptates, laborum, blanditiis explicabo aliquam est ipsa magnam deleniti cupiditate quae nemo praesentium veniam, alias maiores sapiente repellendus provident autem? Pariatur sapiente officiis, iusto dicta, repellat ipsa nulla labore blanditiis obcaecati, expedita reprehenderit doloribus voluptates vel quia! Dolorem, reprehenderit harum eum modi sapiente labore voluptatibus, magni blanditiis at ut accusamus ullam ex. Debitis, veniam qui dignissimos beatae aperiam eveniet quisquam architecto commodi?</p>
 				<p>Dicta, iure consectetur voluptate adipisci omnis perferendis, facilis, ad voluptates exercitationem inventore impedit nemo. Ad, excepturi sed. Quia a autem culpa distinctio doloribus nam blanditiis est minima dolores impedit incidunt at optio, assumenda voluptate molestias sint, beatae facere architecto quis delectus atque cupiditate totam, veniam fuga! Autem omnis explicabo atque doloribus ullam ad sequi eligendi recusandae deserunt repellendus numquam ratione delectus optio repudiandae ea quibusdam, sint sunt voluptates cumque maxime quisquam incidunt totam corrupti! Eveniet esse ipsum ex animi consectetur eius excepturi voluptas illo? Necessitatibus, nemo! Reiciendis sed aperiam, voluptate, molestias dignissimos aliquid laudantium fuga, numquam cumque distinctio earum assumenda?</p>
