--- a/video.html
+++ b/video.html
@@ -199,7 +199,7 @@
 				<p class="lead">Galleria dei nostri video.</p>
 			</header>
 
-			<div class="panel-body">
+			<section class="panel-body">
 				<div class="panel panel-info">
 					<div class="panel-heading">
 						<button class="btn btn-primary" data-toggle="collapse" data-target="#filter">Esegui un filtro di ricerca</button>
@@ -235,21 +235,15 @@
 						</div>
 					</div>
 				</div>
-			</div>
-
-			<section class="panel-body">
 
 				<div class="row">
-
 					<div class="col-lg-4 col-sm-6">
-
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
-
-							<div class="caption pull">
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-primary">Space</span>
 								<span class="btn label label-default">Universe</span>
@@ -259,9 +253,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-danger">Astronauts</span>
@@ -272,9 +266,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-success">Earth</span>
@@ -284,9 +278,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-success">Earth</span>
@@ -299,9 +293,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-info">Sky</span>
@@ -312,9 +306,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-danger">Food</span>
@@ -325,9 +319,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-danger">Food</span>
@@ -338,9 +332,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-danger">Food</span>
@@ -351,9 +345,9 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
-				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				         	</div>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-danger">Food</span>
