--- a/indexlogged.html
+++ b/indexlogged.html
@@ -186,7 +186,7 @@
 				</div>
 			
 				<div class="carousel-caption">
-					<p><a class="btn btn-lg btn-primary" href="indexlogged.html" role="button">Vai alle esperienze</a></p>
+					<p><a class="btn btn-lg btn-primary" href="esperienze.html" role="button">Vai alle esperienze</a></p>
 				</div>
 
 				<!-- Controls -->
