--- a/ricerca.html
+++ b/ricerca.html
@@ -75,7 +75,7 @@
             </li>
             <!-- News ed Eventi -->
             <li>
-              <a href="#about">News ed Eventi</a>
+              <a href="news.html">News ed Eventi</a>
             </li>
             <!-- Blog -->
             <li class="active">
