--- a/scrivici.html
+++ b/scrivici.html
@@ -80,7 +80,7 @@
             </li>
             <!-- News ed Eventi -->
             <li>
-              <a href="#about">News ed Eventi</a>
+              <a href="news.html">News ed Eventi</a>
             </li>
             <!-- Blog -->
             <li>
