--- a/videofiltrato.html
+++ b/videofiltrato.html
@@ -76,7 +76,7 @@
 					</li>
 					<!-- News ed Eventi -->
 					<li>
-						<a href="#about">News ed Eventi</a>
+						<a href="news.html">News ed Eventi</a>
 					</li>
 					<!-- Blog -->
 					<li>
