--- a/partners.html
+++ b/partners.html
@@ -9,12 +9,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- STYLES -->
-		<link rel="stylesheet" href="css/screen.css">
-		<link rel="stylesheet" href="css/print.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-		crossorigin="anonymous">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-		crossorigin="anonymous">
+		<link rel="stylesheet" href="style/screen.css">
+		<link rel="stylesheet" href="style/print.css">
+		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
 	</head>
 
 	<body>
@@ -74,9 +71,9 @@
                 </li>
               </ul>
             </li>
-            <!-- News ed Eventi -->
+            <!-- News -->
             <li>
-              <a href="news.html">News ed Eventi</a>
+              <a href="news.html">News</a>
             </li>
             <!-- Blog -->
             <li>
@@ -138,7 +135,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                <span class="hidden-sm hidden-md hidden-lg"> Login</span>
+                <span class="hidden-md hidden-lg"> Login</span>
               </a>
               <ul id="login-dp" class="dropdown-menu">
                 <li>
@@ -175,7 +172,7 @@
             <li>
               <a href="ricercaglobale.html">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
+                <span class="hidden-md hidden-lg"> Cerca nel sito</span>
               </a>
             </li>
           </ul>
@@ -293,12 +290,8 @@
 		</footer>
 
 		<!-- SCRIPTS -->
-		<script src="js/plugins.js"></script>
-		<script src="js/main.js"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-		crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-		crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<script src="style/bootstrap_local/js/bootstrap.min.js"></script>
 	</body>
 
 </html>
