fix pagine e links

--- a/gen.html
+++ b/gen.html
@@ -257,13 +257,13 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="#facebook">Mappa sito</a>
+              <a href="mappasito.html">Mappa sito</a>
             </li>
             <li>
-              <a href="#Twitter">Privacy Policy</a>
+              <a href="privacy.html">Privacy Policy</a>
             </li>
             <li>
-              <a href="#LinkedIn">Copyright</a>
+              <a href="copyright.html">Copyright</a>
             </li>
           </ul>
         </div>
