eliminata classe inutile

--- a/mappasito.html
+++ b/mappasito.html
@@ -192,7 +192,7 @@
         </header>
         
         <section class="panel-body">
-					<div class="jumbotron text">
+					<div class="jumbotron">
             <ul>
               <li>
                 <h2>Esperienze</h2>
