correzioni + prove screen reader

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
 
       <section>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
+            Video esemplificativo da YouTube.com
+          </iframe>
         </div>
       </section>
 			
