--- a/news.html
+++ b/news.html
@@ -210,14 +210,14 @@
                         </div>
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
-												<div class="col-sm-9 text-right">
-													<span class="label label-default">universe</span>
-													<span class="label label-primary">space</span>
-													<span class="label label-success">earth</span>
-													<span class="label label-info">sky</span>
-													<span class="label label-warning">flight</span>
-													<span class="label label-danger">danger</span>
-												</div>         
+												<ul class="col-sm-9 text-right" aria-label="tags">
+													<li class="label label-default">universe</li>
+													<li class="label label-primary">space</li>
+													<li class="label label-success">earth</li>
+													<li class="label label-info">sky</li>
+													<li class="label label-warning">flight</li>
+													<li class="label label-danger">danger</li>
+												</ul>          
 											</div>
 										</div>
 									</article>
@@ -237,14 +237,14 @@
                         </div>
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
-												<div class="col-sm-9 text-right">
-													<span class="label label-default">universe</span>
-													<span class="label label-primary">space</span>
-													<span class="label label-success">earth</span>
-													<span class="label label-info">sky</span>
-													<span class="label label-warning">flight</span>
-													<span class="label label-danger">danger</span>
-												</div>         
+												<ul class="col-sm-9 text-right" aria-label="tags">
+													<li class="label label-default">universe</li>
+													<li class="label label-primary">space</li>
+													<li class="label label-success">earth</li>
+													<li class="label label-info">sky</li>
+													<li class="label label-warning">flight</li>
+													<li class="label label-danger">danger</li>
+												</ul>          
 											</div>
 										</div>
 									</article>
@@ -264,14 +264,14 @@
                         </div>
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
-												<div class="col-sm-9 text-right">
-													<span class="label label-default">universe</span>
-													<span class="label label-primary">space</span>
-													<span class="label label-success">earth</span>
-													<span class="label label-info">sky</span>
-													<span class="label label-warning">flight</span>
-													<span class="label label-danger">danger</span>
-												</div>         
+												<ul class="col-sm-9 text-right" aria-label="tags">
+													<li class="label label-default">universe</li>
+													<li class="label label-primary">space</li>
+													<li class="label label-success">earth</li>
+													<li class="label label-info">sky</li>
+													<li class="label label-warning">flight</li>
+													<li class="label label-danger">danger</li>
+												</ul>            
 											</div>
 										</div>
 									</article>
@@ -298,7 +298,7 @@
 													<li class="label label-info">sky</li>
 													<li class="label label-warning">flight</li>
 													<li class="label label-danger">danger</li>
-												</div>         
+												</ul>         
 											</div>
 										</div>
 									</article>
@@ -318,14 +318,14 @@
                         </div>
                         <div class="col-md-12 visible-xs"><br></div>
 												<!-- TAGS -->
-												<div class="col-md-9 text-right">
-													<span class="label label-default">universe</span>
-													<span class="label label-primary">space</span>
-													<span class="label label-success">earth</span>
-													<span class="label label-info">sky</span>
-													<span class="label label-warning">flight</span>
-													<span class="label label-danger">danger</span>
-												</div>         
+												<ul class="col-sm-9 text-right" aria-label="tags">
+													<li class="label label-default">universe</li>
+													<li class="label label-primary">space</li>
+													<li class="label label-success">earth</li>
+													<li class="label label-info">sky</li>
+													<li class="label label-warning">flight</li>
+													<li class="label label-danger">danger</li>
+												</ul>           
 											</div>
 										</div>
 									</article>
