index e blog loggati
sistemato link in user e modificata pagina copyright

--- a/indexlogged.html
+++ b/indexlogged.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Shroom Space Ind.</a>
+          <a class="navbar-brand" href="indexlogged.html">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -40,11 +40,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="esperienze.html">Catalogo completo</a>
+                  <a href="esperienze_logged.html">Catalogo completo</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li>
-                  <a href="esperienza.html">Missione circumlunare</a>
+                  <a href="esperienza_logged.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -73,11 +73,11 @@
             </li>
             <!-- News -->
             <li>
-              <a href="news.html">News</a>
+              <a href="news_logged.html">News</a>
             </li>
             <!-- Blog -->
             <li>
-              <a href="blog.html">Blog</a>
+              <a href="blog_logged.html">Blog</a>
             </li>
             <!-- Multimedia -->
             <li class="dropdown">
@@ -86,16 +86,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="foto.html">Foto gallery</a>
+                  <a href="foto_logged.html">Foto gallery</a>
                 </li>
                 <li>
-                  <a href="video.html">Video gallery</a>
+                  <a href="video_logged.html">Video gallery</a>
                 </li>
               </ul>
             </li>
             <!-- Partners -->
             <li>
-              <a href="#about">Partners</a>
+              <a href="partners_logged.html">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -104,16 +104,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Vision</a>
+                  <a href="vision_logged.html">Vision</a>
                 </li>
                 <li>
-                  <a href="#">Storia</a>
+                  <a href="storia_logged.html">Storia</a>
                 </li>
                 <li>
-                  <a href="#">Il Team</a>
+                  <a href="team_logged.html">Il Team</a>
                 </li>
                 <li>
-                  <a href="#">Opportunità lavorative</a>
+                  <a href="opportunita_logged.html">Opportunità lavorative</a>
                 </li>
               </ul>
             </li>
@@ -124,10 +124,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="scrivici.html">Scrivici</a>
+                  <a href="scrivici_logged.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="#">Dove trovarci</a>
+                  <a href="mappa_logged.html">Dove trovarci</a>
                 </li>
               </ul>
             </li>
@@ -147,7 +147,7 @@
             </li>
             <!-- Ricerca -->
             <li>
-              <a href="ricercaglobale.html">
+              <a href="ricercaglobale_logged.html">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 <span class="hidden-md hidden-lg"> Cerca nel sito</span>
               </a>
