--- a/searched_logged.html
+++ b/searched_logged.html
@@ -15,7 +15,6 @@
 	</head>
 
 	<body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -26,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
+          <a class="navbar-brand" href="indexlogged.html">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -40,11 +39,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="esperienze.html">Catalogo completo</a>
+                  <a href="esperienze_logged.html">Catalogo completo</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li>
-                  <a href="esperienza.html">Missione circumlunare</a>
+                  <a href="esperienza_logged.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -73,11 +72,11 @@
             </li>
             <!-- News -->
             <li>
-              <a href="news.html">News</a>
+              <a href="news_logged.html">News</a>
             </li>
             <!-- Blog -->
             <li>
-              <a href="blog.html">Blog</a>
+              <a href="blog_logged.html">Blog</a>
             </li>
             <!-- Multimedia -->
             <li class="dropdown">
@@ -86,16 +85,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="foto.html">Foto gallery</a>
+                  <a href="foto_logged.html">Foto gallery</a>
                 </li>
                 <li>
-                  <a href="video.html">Video gallery</a>
+                  <a href="video_logged.html">Video gallery</a>
                 </li>
               </ul>
             </li>
             <!-- Partners -->
             <li>
-              <a href="partners.html">Partners</a>
+              <a href="partners_logged.html">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -104,40 +103,40 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="vision.html">Vision</a>
+                  <a href="vision_logged.html">Vision</a>
                 </li>
                 <li>
-                  <a href="storia.html">Storia</a>
+                  <a href="storia_logged.html">Storia</a>
                 </li>
                 <li>
-                  <a href="team.html">Il Team</a>
+                  <a href="team_logged.html">Il Team</a>
                 </li>
                 <li>
-                  <a href="opportunita.html">Opportunità lavorative</a>
+                  <a href="opportunita_logged.html">Opportunità lavorative</a>
                 </li>
               </ul>
             </li>
-            <!-- Contatti -->
+            <!-- Contattaci -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="scrivici.html">Scrivici</a>
+                  <a href="scrivici_logged.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="mappa.html">Dove trovarci</a>
+                  <a href="mappa_logged.html">Dove trovarci</a>
                 </li>
               </ul>
             </li>
             <!-- Utente -->
-            <li class="dropdown active">
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li class="active">
+                <li>
                   <a href="user.html">Profilo utente</a>
                 </li>
                 <li>
@@ -147,7 +146,7 @@
             </li>
             <!-- Ricerca -->
             <li>
-              <a href="ricercaglobale.html">
+              <a href="ricercaglobale_logged.html">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 <span class="hidden-md hidden-lg"> Cerca nel sito</span>
               </a>
@@ -157,63 +156,48 @@
       </div>
     </nav>
 
-		<main class="container">
-      <ol class="breadcrumb">
-        <li><a href="indexlogged.html">Home</a></li>
-        <li class="active">Pagina utente</li>
-      </ol>
+    <main class="container">
 
+      <ol class="breadcrumb">
+          <li><a href="index_logged.html">Home</a></li>
+          <li><a href="ricercaglobale_logged.html">Ricerca</a></li>
+          <li class="active">Risultati</li>
+      </ol>
+      
       <div class="panel panel-default">
         <header class="panel-heading">
-          <h1>
-            Area Riservata
-          </h1>
-          <p class="lead">Benvenuto, <strong>User</strong>!</p>
+          <h1>Vediamo cosa ho trovato!</h1>
         </header>
 
-        <table class="table">
-          <tr>
-            <td><strong>Nome:</strong></td>
-            <td><em>Mario</em></td>
-          </tr> 
-          <tr>
-            <td><strong>Cognome:</strong></td>
-            <td><em>Rossi</em></td>
-          </tr>
-          <tr>
-            <td><strong>Email:</strong></td>
-            <td><em>user@email.com</em></td>
-          </tr>
-        </table>
-
         <div class="panel-body">
-          <div class="panel panel-primary">
-            <div class="panel-heading">Lista delle esperienze prenotate</div>
-            <div class="list-group">
-              <div class="list-group-item">
-                <a href="esperienza_logged.html">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <img class="media-object img-rounded img-responsive" src="img/img1.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                      <h2>Missione circumlunare</h2>
-                      <a href="esperienza_logged.html">
-                        <input type="button" class="btn btn-info btn-md" value="Dettagli esperienza">
-                      </a>
-                    </div>
-                    <div class="col-sm-3">
-                      <h3>Valore:</h3>
-                      <h4 class="text-danger">USD 5.000.000,00</h4>
-                    </div>
-                  </div>
-                </a>
+          <div class="alert alert-info" role="alert">
+            <a href="#" class="alert-link">Ecco i tuoi risultati:</a>
+          </div>
+          <div class="media">
+            <a href="blog_logged.html#ricercato1">
+              <div class="media-left">
+                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
               </div>
-            </div>
+              <div class="media-body">
+                <h4 class="media-heading">Come procede la guerra? - Blog</h4>
+                Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati... Continua nel Blog
+              </div>
+            </a>
+          </div>
+          <div class="media">
+            <a href="foto1_logged.html">
+              <div class="media-left">
+                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading">Immagine - Foto gallery</h4>
+                Apri nella foto gallery
+              </div>
+            </a>
           </div>
         </div>
       </div>
-		</main>
+    </main>
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
